# sistema-kanban

./: database.db  main.py  pyproject.toml  requirements.txt
routes/: __init__.py  importacao.py  views.py
static/js/: app.js
templates/: base.html  dashboard.html  index.html  upload.html
